[package]
name = "kosmo-fast24"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
dlv-list = "0.6.0"
fasthash = "0.4.0"
gnuplot = "0.0.46"
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.16.5" }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }

[[bin]]
name = "wss"
path = "src/wss.rs"

[[bin]]
name = "accurate"
path = "src/accurate.rs"

[[bin]]
name = "mrc"
path = "src/mrc.rs"
